# data_autopsy

./: AGENTS.md  README.md  pyproject.toml
.autopsy_cache/meta/: m_e34bab97d1e0.json
.devcontainer/: devcontainer.json
docs/codex/: ledger.md
docs/codex/tasks/: 2026-01-21_step1_store_v0.md  2026-01-21_step2_overview_cache_v0.md  2026-01-21_step3_autopsy_pass1_v0.md  TEMPLATE.md
notebooks/: Autopsy_Lab.ipynb  measurement_store_v0.ipynb
src/autopsy/: __init__.py  pass1.py  store.py
src/data_autopsy/: __init__.py  measurement_store.py
src/data_autopsy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_autopsy_pass1.py  test_measurement_store.py  test_overview_cache.py  test_store.py
tools/: new_task.py
