[project]
name = "data_autopsy"
version = "0.1.0"
description = "Tools for data autopsy and root cause analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Data Autopsy" },
]

dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
